--- a/RomHeredia/RomHeredia.csproj
+++ b/RomHeredia/RomHeredia.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="wwwroot\images\" />
     <Folder Include="wwwroot\lib\jquery\dist\" />
   </ItemGroup>
 
